# rgeolocate

./: .Rbuildignore  .gitignore  .travis.yml  DESCRIPTION  LICENSE  NAMESPACE  NEWS  README.md  cleanup  configure  configure.ac  reconf
R/: RcppExports.R  db_ip.R  freegeoip.R  ip2location.R  ip_api.R  ipinfo.R  maxmind.R  rgeolocate.R  telize.R  utils.R  zzz.R
inst/extdata/: GeoLite2-Country.mmdb
man/: client_info.Rd  db_ip.Rd  freegeoip.Rd  ip2location.Rd  ip_api.Rd  ip_info.Rd  maxmind.Rd  rgeolocate.Rd  telize.Rd
src/: IP2Loc_DBInterface.c  IP2Loc_DBInterface.h  IP2Location.c  IP2Location.h  Makevars  Makevars.in  Makevars.win  RcppExports.cpp  config.h.in  init.c  ip2.cpp  ip2.h  ip_to_df.cpp  maxmind.cpp  maxmind.h  maxminddb.c  maxminddb.h  maxminddb_config.h  rgeolocate.cpp
tests/: testthat.R
tests/testthat/: test_freegeoip.R  test_ip2location.R  test_ip_api.R  test_ip_info.R  test_maxmind.R  test_telize.R
vignettes/: Introduction_to_rgeolocate.R  Introduction_to_rgeolocate.Rmd  Introduction_to_rgeolocate.html  Introduction_to_rgeolocate.md
